apps/filebrowser/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser
  namespace: default
  annotations:
    tailscale.com/tags: tag:k8s
    tailscale.com/https: "true"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - files
  rules:
    - host: files
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: filebrowser
                port:
                  number: 80
